--- a/lab01/БПИ-20-02_Рожков_1.ipynb
+++ b/lab01/БПИ-20-02_Рожков_1.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Загружаем набор данных из CSV-файла"
+    "Загружаем набор данных из CSV-файла. Ссылка: https://www.kaggle.com/datasets/CooperUnion/anime-recommendations-database"
    ]
   },
   {
